--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "ethers": "^6.14.4",
     "framer-motion": "^12.19.1",
     "openai": "^5.6.0",
