--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BACKEND_PORT=4000
-BACKEND_URL="http://localhost:4000/api/"
+BACKEND_HOST_PORT=0.0.0.0
+FRONTEND_URL=http://192.168.1.158:3000     #Ip address of your frontend
 MONGO_URL=mongodb+srv://kabin22013216:xHGOT9qBVTuqFd1k@cluster0.xavjame.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=D_share
 NODE_ENV=development
