--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 BACKEND_PORT=4000
 BACKEND_HOST_PORT=0.0.0.0
 # BACKEND_URL="http://localhost:4000/api/"
-FRONTEND_URL="http://192.168.1.78:3000"
+FRONTEND_URL=http://192.168.38.230:3000
+WEBPER_URL=http://192.168.38.230:5000
 MONGO_URL=mongodb+srv://kabin22013216:xHGOT9qBVTuqFd1k@cluster0.xavjame.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=D_share
 NODE_ENV=development
